--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                               <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                  <a class="nav-link" href="#">Головна<span class="sr-only">(current)</span></a>
+                                  <a class="nav-link" href="https://hmelnik.herokuapp.com/index.html">Головна<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                   <a class="nav-link" href="#">Пам`ятки</a>
