ссылка на санат

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                   <a class="nav-link" href="#">Пам`ятки</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="#">Санаторії</a>
+                                  <a class="nav-link" href="sanat.html">Санаторії</a>
                                 </li>
                                 <li class="nav-item">
                                   <a class="nav-link disabled" href="#">Контакти</a>
